--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
     <script src="./scripts/ScrollTrigger.min.js"></script>    
-    <script type="text/javascript" src="/scripts/scripts.js"></script>
+    <script type="text/javascript" src="./scripts/scripts.js"></script>
 
   </body>
 </html>
