--- a/index.html
+++ b/index.html
@@ -8,42 +8,42 @@
 
   <body>
 
- <div class="gallery">
+<div class="gallery">
 	<ul class="cards">
-		<li><iframe width="100%" height="100%" src="https://www.youtube.com/embed/NUqnPYwoiF4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/-7t5KPGWG5w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/UllCfkNRyW0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/JtubISQ7mdg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/_-nHgksLBxU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/AQABi-9EbbY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/YqiVFcC8dWc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/UynnWQIAs0M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/C977IbwoWuY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/x2sDPDf9WUQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/so4eymMu6eg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/f6UvKxDvcBM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/jFvTVQObI5I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/91rBMxHawl8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/ONrJIDGxHjk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/OBq5dq_5448" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/CW7akCRiOys" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/dA9em-fI60g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/Z7C53o3_o8o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/0Qd9QX8GFP8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/FIuXy_irHQs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/bEj8z1cBrDg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/ygD27hKYVZQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/wLKHQSf7jFo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/m4GpA9B0g3Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/waOoRSDmftY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/p4iQsp1o68o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/O-IAmz0W428" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/kq3XBj70ZVE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/kq3XBj70ZVE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-		<li><iframe width="560" height="315" src="https://www.youtube.com/embed/uzMSLidMU6A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/NUqnPYwoiF4"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/-7t5KPGWG5w"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/UllCfkNRyW0"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/JtubISQ7mdg"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/_-nHgksLBxU"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/AQABi-9EbbY"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/YqiVFcC8dWc"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/UynnWQIAs0M"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/C977IbwoWuY"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/x2sDPDf9WUQ"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/so4eymMu6eg"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/f6UvKxDvcBM"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/jFvTVQObI5I"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/91rBMxHawl8"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/ONrJIDGxHjk"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/OBq5dq_5448"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/CW7akCRiOys"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/dA9em-fI60g"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/Z7C53o3_o8o"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/0Qd9QX8GFP8"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/FIuXy_irHQs"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/bEj8z1cBrDg"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/ygD27hKYVZQ"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/wLKHQSf7jFo"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/m4GpA9B0g3Q"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/waOoRSDmftY"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/p4iQsp1o68o"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/O-IAmz0W428"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/kq3XBj70ZVE"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/qTqcXKO-1Co"></iframe></li>
+		<li><iframe src="https://www.youtube.com/embed/uzMSLidMU6A"></iframe></li>
 	</ul>
 </div>
-
+	  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
     <script src="./scripts/ScrollTrigger.min.js"></script>    
     <script type="text/javascript" src="./scripts/scripts.js"></script>
