--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
   <head>
 
   <body>
-update
+<header>
+<h1>
+  Sam's Christmas Tunes
+</h1>
+<h2>
+  A collection of unSpotifiable songs
+</h2>
+</header>
+
 <div class="gallery">
 	<ul class="cards">
 		<li><iframe src="https://www.youtube.com/embed/NUqnPYwoiF4"></iframe></li>
@@ -43,6 +51,26 @@ update
 		<li><iframe src="https://www.youtube.com/embed/uzMSLidMU6A"></iframe></li>
 	</ul>
 </div>
+
+<img style="width: 250px" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/christmas-tree-ideas-flowers-1598901890.jpg">
+
+
+<img style="width: 40vw; position: absolute; top: 50vh; right: 0" src="https://media.istockphoto.com/vectors/christmas-elf-vector-id497055500">
+
+<img style="width: 50vw; position: absolute; top: 90vh; right: 40vw" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR1KFkZeseWlNijmGtB5iIE514qcKYBIlsG8Idg2zEDYX8f8HUrST0r0L3ppYhgwRwVRlw&usqp=CAU">
+
+<img style="width: 100vw; position: absolute; top: 120vh; left: 0;" src="https://wp-media.patheos.com/blogs/sites/719/2018/12/DBA-Adoration-Print.jpg">
+
+
+<img style="width: 50vw; position: absolute; top: 250vh; left: 0;" src="https://i.pinimg.com/236x/64/0b/b7/640bb7a8821ba2188708acdd353dcd5e--hanging-christmas-lights-christmas-decorations.jpg">
+
+
+<img style="width: 30vw; position: absolute; top: 300vh; right: 0;" src="https://townsquare.media/site/622/files/2016/12/MickeyXMas00.jpg">
+
+
+<img style="width: 100vw; position: absolute; top: 350vh; right: 0;" src="https://i.shgcdn.com/3feed9ca-cdd8-43de-b4e2-07b50f06f720/-/format/auto/-/preview/3000x3000/-/quality/lighter/">
+
+
 	  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
     <script src="./scripts/ScrollTrigger.min.js"></script>    
